Change:デザイン修正対応

--- a/index.html
+++ b/index.html
@@ -19,7 +19,11 @@
 <body>
   <header class="header">
     <img class="header_logo" src="./images/logo.png" alt="">
-    <a href="https://ginza-solaria.com/contact/"><img class="header_formbtn" src="./images/fv-button.png" alt=""></a>
+    <div class="header_right">
+      <a href="https://ginza-solaria.com/contact/"><img class="header_formbtn" src="./images/fv-button.png" alt=""></a>
+      <a class="header_tel sp-hidden" href="tel:03-5524-1850">03-5524-1850</a>
+    </div>
+    
   </header>
   
   <section class="FV">
@@ -101,7 +105,7 @@
     <p class="sec_text">
       バイオセンサーを⽤いて個々の<br>
       「太る・痩せない」をモニタリングし、<br>
-      早く効果的に”痩せる”へとシュガー（糖質）をジャックします。
+      早く効果的に”痩せる”へとシュガー（糖質）を<br class="sp_br">ジャックします。
     </p>
     <div class="reason_inner">
       <div class="reason_inner_cards">
@@ -395,7 +399,7 @@
         </div>
         <div class="price_inner_text">
           <img class="price_inner_text_img" src="./images/price.png" alt="">
-          <img src="" alt="">
+          <img class="price_inner_text_medal" src="./images/price-medal.png" alt="">
         </div>
       </div>
     </div>
@@ -454,8 +458,10 @@
           <p class="footer_inner_text_desc">医師をはじめとする全てのスタッフが<br>おもてなしの⼼をもって<br class="sp-br">皆様をお迎えいたします。</p>
         </div>
         <div class="footer_inner_btn">
-          <img class="sp-hidden" src="./images/cv-button.png" alt="">
-          <img class="pc-hidden" src="./images/fv-button.png" alt="">
+          <a href="https://ginza-solaria.com/contact/">
+            <img class="sp-hidden" src="./images/cv-button.png" alt="">
+            <img class="pc-hidden" src="./images/fv-button.png" alt="">
+          </a>
         </div>
       </div>
     </div>
