価格セクションデザイン変更対応

--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
         </div>
         <div class="price_inner_text">
           <img class="price_inner_text_img" src="./images/price.png" alt="">
+          <div class="price_inner_text_line"></div>
           <img class="price_inner_text_medal" src="./images/price-medal.png" alt="">
         </div>
       </div>
