VOICEのヘッダーのレイアウト修正 / voice-leftのToggle実装

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css">
 	<script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <!-- Swiper系 -->
+  <script src="./js/toggle.js"></script>
 
   <!-- <favicon> -->
     <!-- <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -190,18 +191,10 @@
         
         <!-- <続きを読む1> -->
         <p class="voice_left_text">2020年7月から90日で約15kg運動無しで体重が落ちました。最初の60日で約10kg痩せたのですが、CTスキャンデータで分かるように内臓脂肪が驚く速さで減ったのです。コロナの影響で人と会う機会が減ったことと。寝る前に食べてしまうことも増ええて人生で一番太った時のシュガージャック治療でした。</p>
-        <a href="#voice-text"> >>続きを読む</a>
-        <div class="voice_left_text1" id="voice-text"></div>  
-        <div class="voice-text">
-        <p class="voice_left_text">少し不安でしたが、装着感の無い血糖値センサーと、採血することなく血糖値がわかる機器で、何を食べたらどれくらい太ることになるのかが数値で見えた時に、太る証拠を突きつけられ、全て自分の食が肥満を左右していることに納得しました。(ごまかしの効かないウソ発見器です)
+        <a id="voice_left_text_more" class="more"> >>続きを読む</a>
+        <p id="voice_left_text_more_area" class="voice_left_text hidden">少し不安でしたが、装着感の無い血糖値センサーと、採血することなく血糖値がわかる機器で、何を食べたらどれくらい太ることになるのかが数値で見えた時に、太る証拠を突きつけられ、全て自分の食が肥満を左右していることに納得しました。(ごまかしの効かないウソ発見器です)
         また、食べ物に対するガイドと処方された薬やサプリを飲むだけで血糖値と体重が減り続け、糖尿病に近い状態でしたがそれもなくなり大満足です。
         管理栄養士さんの毎日の食事アドバイスはシンプルでわかりやすく、後半には自分で食事判断ができるようになったことで、サービスの終了後2ヶ月たってもリバウンドゼロです。</p>
-        <!-- </div>  -->
-        <a href="#close">閉じる</a> 
-        </div> 
-        <!-- <続きを読む1> -->                                     
-        
-        <!-- <横並びと縦修正> -->
       </div>
       <div class="voice_inner_right">
         <p class="voice_right_head">CTスキャン画像の推移</p>
