画像サイズ、文字フォント変更

--- a/index.html
+++ b/index.html
@@ -209,6 +209,29 @@
         </div>
       </div>
     </div>
+    <!-- <sp用CTスキャン> -->
+      <div class="sp-voice">
+        <div class="ct-sp1">
+        <img src="./images/ct1.png" alt="CTスキャン画像">
+        <p class="voice_right_text text-left">2020年7月9日<br>BMI 29.4<br>全脂肪面積 362.0cm<br>内臓脂肪 237.5cm
+        </p>
+      </div>
+        <div class="ct-sp2">
+        <img src="./images/ct2.png" alt="CTスキャン画像">
+        <p class="voice_right_text">2020年9月10日<br>BMI 26.0<br>全脂肪面積 221.4cm<br>内臓脂肪119.9cm
+        </p>
+        </div>
+        <div class="ct-sp3">
+        <img src="./images/ct3.png" alt="CTスキャン画像">
+        <p class="voice_right_text">2020年11月12日<br>BMI 24.9<br>全脂肪面積 160cm<br>内臓脂肪 96.1cm
+        </p>
+      </div>
+        <!-- <div class="child child1">child1</div>
+        <div class="child child2">child2</div>
+        <div class="child child3">child3</div> -->
+      </div>
+    
+    
   </section>
         <!-- <横並びと縦修正> -->
   
@@ -242,13 +265,13 @@
 
             <div class="swiper-slide">
               <p class="mechanism_card_head">4.見えるスリム化</p>
-              <img src="./images/body-mechanism3.png" alt="">
+              <img src="./images/body-mechanism4.png" alt="">
               <p class="mechanism_card_text">医師の投薬や管理栄養士摂食指導で効率的なな脂肪燃焼を加速させさせます</p>
             </div>
 
             <div class="swiper-slide">
               <p class="mechanism_card_head">5.太らない習慣</p>
-              <img src="./images/body-mechanism3.png" alt="">
+              <img src="./images/body-mechanism5.png" alt="">
               <p class="mechanism_card_text">50日間1200時間のモニタリングで、余分な脂肪貯蔵を回避する戦略的食事と、無理なく脂肪を減らすアドバイスを行う
               </p>
             </div>
@@ -324,7 +347,7 @@
             <div class="swiper-slide">
               <div class="program_card">
                 <p class="program_card_head">4.スリミング（服用）</p>
-                <img src="./images/treatment3-navi.png" alt="">
+                <img src="./images/treatment4-navi.png" alt="">
               </div>
               <p class="program_bottom">医師からの投薬を服用し<br>脂肪の燃焼を効率的に行う</p>
             </div>
@@ -332,7 +355,7 @@
             <div class="swiper-slide">
               <div class="program_card">
                 <p class="program_card_head">5.ファスティングボーンブロス</p>
-                <img src="./images/treatment3-navi.png" alt="">
+                <img src="./images/treatment5-navi.png" alt="">
               </div>
               <p class="program_bottom">医師や管理栄養士のアドバイスで<br>理想的「体重設定値」へと導く</p>
             </div>
