画像サイズと文字サイズの変更

--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
             <div class="swiper-slide">
               <div class="program_card">
                 <p class="program_card_head">4.スリミング（服用）</p>
-                <img src="./images/treatment4-navi.png" alt="">
+                <img src="./images/treatment4-medication.png" alt="">
               </div>
               <p class="program_bottom">医師からの投薬を服用し<br>脂肪の燃焼を効率的に行う</p>
             </div>
@@ -339,7 +339,7 @@
             <div class="swiper-slide">
               <div class="program_card">
                 <p class="program_card_head">5.ファスティングボーンブロス</p>
-                <img src="./images/treatment5-navi.png" alt="">
+                <img src="./images/treatment5-medication.png" alt="">
               </div>
               <p class="program_bottom">医師や管理栄養士のアドバイスで<br>理想的「体重設定値」へと導く</p>
             </div>
